--- a/src/demos/basic/index.html
+++ b/src/demos/basic/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <input id="clearG" type="button" value="Clear"></input>
-        <script src="./index.js"></script>
+        <script src="./index.js">
+         </script>
     </body>
 </html>
